--- a/includes/css/my_shortcodes_styles.css
+++ b/includes/css/my_shortcodes_styles.css
@@ -124,10 +124,10 @@
 /* Buttons
 ================================================== */
 .my-button {
-	font-family: 'Helvetica Neue', Helvetica, Arial, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 	margin: 5px 5px 5px 0;
 	cursor: pointer;
-	display: inline-block;
+	display:-moz-inline-stack;display:inline-block;zoom:1;*display:inline;vertical-align:baseline;
 	white-space: nowrap;
 	nowhitespace: afterproperty;
 	text-align: center;
